After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683480 - search-engine-tracker: Fix query when no location is specified
search-engine-tracker: Fix query when no location is specified
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-06 11:23 UTC by Florian Müllner
Modified: 2012-09-06 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
search-engine-tracker: Fix query when no location is specified (1.41 KB, patch)
2012-09-06 11:23 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2012-09-06 11:23:24 UTC
See patch.
Comment 1 Florian Müllner 2012-09-06 11:23:27 UTC
Created attachment 223628 [details] [review]
search-engine-tracker: Fix query when no location is specified

Although the location_uri is optional for queries, the generated
sparql query is invalid if it is missing; fix by moving the
concatenation operator into the optional part.
Comment 2 Cosimo Cecchi 2012-09-06 13:07:06 UTC
Review of attachment 223628 [details] [review]:

Thanks!
Comment 3 Florian Müllner 2012-09-06 13:25:17 UTC
Attachment 223628 [details] pushed as 11b05d9 - search-engine-tracker: Fix query when no location is specified