search-engine-tracker: Fix query when no location is specified

Although the location_uri is optional for queries, the generated
sparql query is invalid if it is missing; fix by moving the
concatenation operator into the optional part.

https://bugzilla.gnome.org/show_bug.cgi?id=683480